--- a/src/assets/css/Header.css
+++ b/src/assets/css/Header.css
@@ -6,8 +6,14 @@
   margin-right: 15px;
 }
 .ul-item .li-item .a-item {
-  color: rgba(255, 255, 255, 0.8) !important;
+  color: rgba(255, 255, 255, 0.4) !important;
   font-size: 20px;
+  transition: 0.3s ease;
+}
+.ul-item .li-item .a-item:hover {
+  color: rgba(255, 255, 255, 0.7) !important;
+  font-size: 20px;
+  transition: 0.3s ease;
 }
 
 .logo {
@@ -23,4 +29,42 @@
   top: 50px;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+.carousel-img {
+  max-width: 70%;
+}
+.carousel-box {
+  display: flex;
+  padding: 1rem;
+  height: 80%;
+}
+.text-box {
+  width: 54%;
+  display: flex;
+  justify-content: center;
+  align-items: baseline;
+  flex-direction: column;
+  padding: 4rem;
+}
+.img-box-carousel {
+  width: 39%;
+  margin-right: 2%;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.mantine-Carousel-control{
+  background: none;
+  border: none;
+}
+.text-box h1{
+  font-size: 24px;
+}
+.text-box p{
+  text-align: left;
+}
+
+section.header {
+  height: 100vh;
 }
