--- a/src/assets/css/Footer.css
+++ b/src/assets/css/Footer.css
@@ -31,6 +31,41 @@ footer a {
     align-items: flex-end;
     gap: 2rem;
 }
-.footer-column-1 img {
+.footer-column img {
     height: 2.5rem;
+}
+
+@media only screen and (max-width: 600px) {
+    .footer-row-1 {
+        flex-direction: column;
+        align-items: center;
+    }
+    .footer-row-1 > h4 {
+        font-size: 1.5rem;
+    }
+    .footer-row-1 > h4:nth-child(-n+2) {
+        display: none;
+    }
+
+    .footer-row-2 {
+        flex-direction: column;
+        align-items: center;
+        padding: 2rem;
+        gap: 3rem;
+    }
+
+    .footer-column:nth-child(1) {
+        flex-direction: column;
+        align-items: center;
+        gap: 1rem;
+    }
+
+    .footer-column:nth-child(2) {
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+
+    .footer-column img {
+        height: 2rem;
+    }
 }
